# mixture-density-net

./: .gitignore  LICENSE  MNIST_training.ipynb  Makefile  README.md  audio_cough.ipynb  misc.ipynb  pyproject.toml  training.ipynb
src/: datasets.py  training.py  visualization.py
src/architecture/: architecture.py  models.py  modules.py
