[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.poetry]
authors = ["clementw168 <clementwang2001@gmail.com>"]
description = ""
license = "MIT"
name = "mixture-density-net"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
MarkupSafe = "2.1.3"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
filelock = "3.9.0"
idna = "3.4"
jinja2 = "3.1.2"
matplotlib = "^3.8.2"
mpmath = "1.3.0"
networkx = "3.0"
numpy = "^1.26.2"
python = "^3.11"
requests = "2.28.1"
scikit-learn = "^1.3.2"
sympy = "1.12"
torch = "2.0.1+cu117"
torchaudio = "2.0.2+cu117"
torchvision = "0.15.2+cu117"
typing-extensions = "4.4.0"
urllib3 = "1.26.13"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.6"
toml-sort = "^0.23.1"
tqdm = "^4.66.1"
ipykernel = "^6.26.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
